--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,56 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
-    <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Hello World, MyActivity"
-            />
+	<TextView  
+		android:paddingTop="20dip"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content"
+	    android:textSize="16sp" 
+	    android:textStyle="bold"
+	    android:gravity="center"
+		android:text="Shaker Demo"/>
+ 	<TableLayout
+		android:paddingTop="10dip"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:stretchColumns="*">
+		<TableRow>
+			<TextView  
+	    		android:layout_width="wrap_content" 
+	    		android:layout_height="wrap_content"
+	    		android:textSize="14sp"  
+	    		android:text="X-Axis"
+	    		android:gravity="center"/>
+	    	<TextView  
+	    		android:layout_width="wrap_content" 
+	    		android:layout_height="wrap_content" 
+	    		android:textSize="14sp" 
+	    		android:text="Y-Axis"
+	    		android:gravity="center"/>
+	    	<TextView  
+	    		android:layout_width="wrap_content" 
+	    		android:layout_height="wrap_content"
+	    		android:textSize="14sp"  
+	    		android:text="Z-Axis"
+	    		android:gravity="center"/>
+		</TableRow>
+		<TableRow>
+			<TextView  
+	    		android:layout_width="wrap_content" 
+	    		android:layout_height="wrap_content"
+	    		android:id="@+id/x_axis"
+	    		android:gravity="center"/>
+	    	<TextView  
+	    		android:layout_width="wrap_content" 
+	    		android:layout_height="wrap_content"
+	    		android:id="@+id/y_axis"
+	    		android:gravity="center"/>
+	    	<TextView  
+	    		android:layout_width="wrap_content" 
+	    		android:layout_height="wrap_content"
+	    		android:id="@+id/z_axis"
+	    		android:gravity="center"/>
+		</TableRow>
+	</TableLayout>
 </LinearLayout>
 
